2007-07-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-cvs.el (vc-cvs-revert): Use vc-default-revert.
	(vc-cvs-checkout): Remove last arg now unused; simplify.

2007-07-08  Chong Yidong  <cyd@stupidchicken.com>

	* longlines.el (longlines-wrap-region): Avoid marking buffer as
	modified.
	(longlines-auto-wrap, longlines-window-change-function):
	Remove unnecessary calls to set-buffer-modified-p.

2007-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (file-remote-p): Introduce optional parameter CONNECTED.

	* net/tramp.el:
	* net/tramp-ftp.el:
	* net/tramp-smb.el:
	* net/tramp-uu.el:
	* net/trampver.el: Migrate to Tramp 2.1.

	* net/tramp-cache.el:
	* net/tramp-fish.el:
	* net/tramp-gw.el: New Tramp packages.

	* net/tramp-util.el:
	* net/tramp-vc.el: Removed.

	* net/ange-ftp.el: Add ange-ftp property to 'start-file-process
	(ange-ftp-file-remote-p): Handle optional parameter CONNECTED.

	* net/rcompile.el (remote-compile): Handle Tramp 2.1 arguments.

	* progmodes/compile.el (compilation-start): Redefine
	`start-process' temporarily when `default-directory' is remote.
	Remove case of synchronous compilation, this won't happen ever.
	(compilation-setup): Make local variable `comint-file-name-prefix'
	for remote compilation.

2007-07-08  Martin Rudalics  <rudalics@gmx.at>

	* novice.el (disabled-command-function): Fit window to buffer to
	make last line visible.
	Reported by Stephen Berman <Stephen.Berman at gmx.net>.

	* mouse.el (mouse-drag-track): Reset transient-mark-mode to nil
	when handling the terminating event.

2007-07-07  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (math-read-number-simple): Remove leading 0s.
	(math-bignum-digit-length): Change to optimal value.

	* calc/calc-bin.el (math-bignum-logb-digit-size)
	(math-bignum-digit-power-of-two): Evaluate when compiled.

	* calc/calc-comb.el (math-small-factorial-table)
	(math-init-random-base,math-prime-test): Remove unnecessary calls
	to `math-read-number-simple'.
